--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,18 @@
-  <!DOCTYPE html>
-  <html>
-  <head>
-    <title>QuickBlog</title>
-    <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-    <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-    <%= csrf_meta_tags %>
-    <%= auto_discovery_link_tag(:atom, posts_path(:atom)) %>
-  </head>
-  <body>
-    <div id="main">
-      <%= yield %>
-    </div>
-  </body>
-  </html>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Pro Photo Sites Blog</title>
+  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <%= csrf_meta_tags %>
+  <%= auto_discovery_link_tag(:atom, posts_path(:atom)) %>
+</head>
+<body>
+  <%= render partial: 'layouts/header' %>
+
+<div id="main">
+  <%= yield %>
+</div>
+  <%= render partial: 'layouts/footer' %>
+</body>
+</html>
