RSpec and Comment Bugfixes

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,12 @@
 
       <li class="divider hide-for-small"></li>
       <li>
-        <%= link_to 'Twitter', 'https://twitter.com/' %>
+        <%= link_to 'Twitter', 'https://twitter.com/MikeHolownych' %>
+      </li>
+
+      <li class="divider hide-for-small"></li>
+      <li>
+        <%= link_to 'Blog', '/blog' %>
       </li>
 
       <li class="divider hide-for-small"></li>
