--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,10 +6,24 @@
  <%= link_to 'Back', posts_path %>
 
  <h2>Comments</h2>
+ <div id ="disqus_thread">
+   <%= disqus_thread %>
+ </div>
  <div id="comments">
   <%= render partial: @post.comments %>
  </div>
-<%= form_for [@post, Comment.new], remote: true do |f| %>
+<%= form_for [@post, @comment], remote: true do |f| %>
+  <% if @comment.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
+
+      <ul>
+      <% @comment.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
   <p>
     <%= f.label :body, "New comment" %><br/>
     <%= f.text_area :body %>
