Replaced comments with Disqus comments

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,7 +9,7 @@
  <div id ="disqus_thread">
    <%= disqus_thread %>
  </div>
- <div id="comments">
+<!-- <div id="comments">
   <%= render partial: @post.comments %>
  </div>
 <%= form_for [@post, @comment], remote: true do |f| %>
@@ -29,4 +29,4 @@
     <%= f.text_area :body %>
   </p>
   <p><%= f.submit "Add comment" %></p>
-<% end %>
+<% end %> -->
